Simplify front page

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -91,7 +91,7 @@
 						<li>Drag your movie or episode files onto the top-right <img alt="===" src="images/droparea.png" /> drop area</li>
 						<li>Hit &quot;Download&quot;!</li>
 					</ol>
-					<p><strong>Use FileBot from the command-line!</strong> There is a simple <acronym title="command-line interface"><a href="cli.html">CLI</a></acronym> for core tasks like renaming media files and fetching subtitles 
+					<p><strong>Use FileBot on the command-line!</strong> There is a simple <acronym title="command-line interface"><a href="cli.html">CLI</a></acronym> for core tasks like renaming media files and fetching subtitles 
 					as well as checking or creating SFV files. On top of that you can use our <a href="script.html">scripting engine</a> to define more complex 
 					automated processing. There's already <a href="forums/viewtopic.php?t=5#p5">shared scripts</a> for
 					various tasks that you can just run right away or further customize to your needs.</p>
@@ -100,18 +100,10 @@
 						<li>Extract files from multi-volume rar archives</li>
 						<li>Fetch artwork and create nfo files for TV shows or movies</li>
 						<li>Export your media files including media info as CSV text file</li>
-						<li>Transfer files from and to any server via FTP/SCP/SFTP and run commands via SSH</li>
 						<li>Update your Kodi or Plex library</li>
 						... and more!
 					</ul>
 					<p>Setting up a <strong>fully automated media center</strong> – extract archives, organize tv shows and movies, download subtitles, fetch artwork and metadata, update Kodi – with FileBot it's <a href="forums/viewtopic.php?t=215#p1561">that</a> easy!</p>
-					<ul style="list-style-type:  square; border: thin dotted lavender; background: #FDFDFF">
-						<li><a href="forums/viewtopic.php?t=215#p1561" target="_blank">µTorrent on Windows</a></li>
-						<li><a href="forums/viewtopic.php?t=215#p9774" target="_blank">qBittorrent on Mac OS X</a></li>
-						<li><a href="forums/viewtopic.php?t=215#p5316" target="_blank">rTorrent on any Linux server</a></li>
-						<li><a href="forums/viewtopic.php?t=215#p1561" target="_blank">Console tool on all platforms</a></li>
-					</ul>
-					<p>If you have any questions or problems just to check the <a href="forums/viewtopic.php?t=7">FAQ</a> or search the <a href="forums/">forums</a>.</p>
 
 					<div class="video">
 						<iframe src="getting-started/index.html" frameborder="0" allowfullscreen="true"></iframe>
@@ -241,7 +233,7 @@
 					<p>
 						The project is continuously seeking for improvements, so any kind of <a target="_blank" href="forums/viewforum.php?f=8">feedback</a> is more than welcome 
 						and if there's any questions or problems just start posting in the <a target="_blank" href="forums/">forums</a> or check the <a target="_blank" href="manual.html"><acronym title="frequently asked questions">FAQ</acronym></a>.
-						We're social as well. Follow us on <a target="_blank" href="https://twitter.com/filebot_renamer">twitter</a> and become a fan on <a target="_blank" href="https://www.facebook.com/filebot">facebook</a>.
+						We're social as well. Follow us on <a target="_blank" href="https://twitter.com/filebot_renamer">twitter</a>, become a fan on <a target="_blank" href="https://www.facebook.com/filebot">facebook</a> or join our <a href="https://discord.gg/skTt2em">Discord </a> channel.
 					</p>
 				</div>
 			</div>
