Ubuntu snap package

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -54,7 +54,7 @@
 						<li>Debian 10 / Ubuntu 18.10 package: <a href="@{link.release.prefix}_universal.deb">@{release}_universal.deb</a> <small class="comment">(requires OpenJDK 11)</small></li>
 						<li>Raspberry Pi package: <a href="@{link.release.prefix}_universal-jdk8.deb">@{release}_universal-jdk8.deb</a> <small class="comment">(requires OpenJDK 8)</small></li>
 						<li>Debian package is available <a href="linux/apt.html">via APT</a></li>
-						<li>Ubuntu package is available <a href="linux/snap.html">on the Ubuntu Store</a></li>
+						<li>Ubuntu snap package is available <a href="linux/snap.html">on the Ubuntu Store</a></li>
 					</ul>
 				</div>
 
