Add {fps} (as BigDecimal) convenience binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -489,6 +489,12 @@
 							<td>String</td>
 						</tr>
 						<tr>
+							<td>fps</td>
+							<td>frame rate</td>
+							<td>23.976</td>
+							<td>Decimal</td>
+						</tr>
+						<tr>
 							<td>khz</td>
 							<td>sampling rate</td>
 							<td>44.1 kHz</td>
