Add RPM package

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -51,8 +51,8 @@
 					<h2>FileBot for Ubuntu and Debian Linux</h2>
 					<ul class="list">
 						<li>Debian package: <a href="@{link.release.prefix}_amd64.deb">@{release}_amd64.deb</a> <small class="comment">(requires OpenJDK 11)</small></li>
-						<li>Debian 10 / Ubuntu 18.10 package: <a href="@{link.release.prefix}_universal.deb">@{release}_universal.deb</a> <small class="comment">(requires OpenJDK 11)</small></li>
-						<li>Raspberry Pi package: <a href="@{link.release.prefix}_universal-jdk8.deb">@{release}_universal-jdk8.deb</a> <small class="comment">(requires OpenJDK 8)</small></li>
+						<li>Debian Buster / Ubuntu 18.10 package: <a href="@{link.release.prefix}_universal.deb">@{release}_universal.deb</a> <small class="comment">(requires OpenJDK 11)</small></li>
+						<li>Debian Stretch / Raspberry Pi package: <a href="@{link.release.prefix}_universal-jdk8.deb">@{release}_universal-jdk8.deb</a> <small class="comment">(requires OpenJDK 8)</small></li>
 						<li>Debian package is available <a href="linux/apt.html">via APT</a></li>
 						<li>Ubuntu snap package is available <a href="linux/snap.html">on the Ubuntu Store</a></li>
 					</ul>
@@ -62,6 +62,7 @@
 					<img class="icon" src="images/package.png" alt="download" width="48" height="48" />
 					<h2>FileBot for all POSIX platforms</h2>
 					<ul class="list">
+						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}.rpm">@{release}.rpm</a> <small class="comment">(requires OpenJDK 8)</small></li>
 						<li>POSIX portable tarball: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">for Linux, BSD and Solaris</small> <small class="comment">(requires OpenJDK 8)</small></li>
 						<li>Arch Linux package is available <a href="linux/aur.html">via AUR</a></li>
 						<li>Docker images are available <a href="linux/docker.html">on Docker Hub</a></li>
