--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -89,7 +89,7 @@
 
 					<h2 class="reference" id="bindings">
 						Binding Reference
-						<a href="https://github.com/filebot/filebot/tree/master/source/net/filebot/format/MediaBindingBean.java" class="source" target="_blank">source</a>
+						<a href="docs/api/net/filebot/format/MediaBindingBean.html" class="source" target="_blank">source</a>
 					</h2>
 					<table class="reference binding">
 						<tr>
@@ -720,7 +720,7 @@
 
 					<h2 class="reference" id="functions">
 						Function Reference
-						<a href="https://github.com/filebot/filebot/tree/master/source/net/filebot/format/ExpressionFormatMethods.java" class="source" target="_blank">source</a>
+						<a href="docs/api/net/filebot/format/ExpressionFormatMethods.html" class="source" target="_blank">source</a>
 					</h2>
 					<p>
 						<code><span class="method">String.pad</span>(<span class="numeral">length</span>, <span class="string">padding</span> = <span class="string">"0"</span>)</code>
