Add YUM repository

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -198,6 +198,7 @@
 						<li>macOS package is available <a href="mac/brew.html">via brew cask</a></li>
 						<li>Debian package is available <a href="linux/apt.html">via APT</a></li>
 						<li>Ubuntu package is available <a href="linux/snap.html">on the Ubuntu Store</a></li>
+						<li>Fedora package is available <a href="linux/yum.html">via DNF and YUM</a></li>
 						<li>Synology NAS package is available <a href="linux/syno.html">via Package Center</a></li>
 						<li>QNAP NAS package is available <a href="linux/qnap.html">via App Center</a></li>
 						<li>Arch Linux package is available <a href="linux/aur.html">via AUR</a></li>
