Fix broken links

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -62,9 +62,9 @@
 					<img class="icon" src="images/package.png" alt="download" width="48" height="48" />
 					<h2>FileBot for all POSIX platforms</h2>
 					<ul class="list">
-						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}.rpm">@{release}.rpm</a> <small class="comment">(requires OpenJDK 8)</small></li>
+						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}.rpm">@{release}_universal-jdk8.rpm</a> <small class="comment">(requires OpenJDK 8)</small></li>
 						<li>POSIX portable tarball: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">for Linux, BSD and Solaris</small> <small class="comment">(requires OpenJDK 8)</small></li>
-						<li>Fedora package is available <a href="linux/yum.html">via DNF and YUM</a></li>
+						<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and YUM</a></li>
 						<li>Arch Linux package is available <a href="linux/aur.html">via AUR</a></li>
 						<li>Docker images are available <a href="linux/docker.html">on Docker Hub</a></li>
 					</ul>
