--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -192,13 +192,13 @@
 						<li>Debian package: <a href="@{link.release.prefix}_amd64.deb">@{release}_amd64.deb</a> <small class="comment">(requires OpenJDK 11)</small></li>
 						<li>Debian Buster / Ubuntu 18.10 package: <a href="@{link.release.prefix}_universal.deb">@{release}_universal.deb</a> <small class="comment">(requires OpenJDK 11)</small></li>
 						<li>Debian Stretch / Raspberry Pi package: <a href="@{link.release.prefix}_universal-jdk8.deb">@{release}_universal-jdk8.deb</a> <small class="comment">(requires OpenJDK 8)</small></li>
-						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}.rpm">@{release}.rpm</a> <small class="comment">(requires OpenJDK 8)</small></li>
+						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}.rpm">@{release}_universal-jdk8.rpm</a> <small class="comment">(requires OpenJDK 8)</small></li>
 						<li>POSIX portable tarball: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">for Linux, BSD and Solaris</small> <small class="comment">(requires OpenJDK 8)</small></li>
 						<li>Windows package is available <a href="windows/chocolatey.html">via Chocolatey</a></li>
 						<li>macOS package is available <a href="mac/brew.html">via brew cask</a></li>
 						<li>Debian package is available <a href="linux/apt.html">via APT</a></li>
 						<li>Ubuntu package is available <a href="linux/snap.html">on the Ubuntu Store</a></li>
-						<li>Fedora package is available <a href="linux/yum.html">via DNF and YUM</a></li>
+						<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and YUM</a></li>
 						<li>Synology NAS package is available <a href="linux/syno.html">via Package Center</a></li>
 						<li>QNAP NAS package is available <a href="linux/qnap.html">via App Center</a></li>
 						<li>Arch Linux package is available <a href="linux/aur.html">via AUR</a></li>
