--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -187,7 +187,7 @@
 						<li class="macosx">Available on the <a href="https://get.filebot.net/mac/2" target="itunes_store">Mac App Store</a></li>
 						<li class="macappstore note"><span>The <a href="https://get.filebot.net/mac/2" target="itunes_store">Mac App Store</a> version does not support <a href="forums/viewtopic.php?t=5983">certain features</a>.</span></li>
 						-->
-						<li>Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a> or <a href="@{link.release.prefix}_x86.msi">@{release}_x86.msi</a></li>
+						<li>Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
 						<li>Windows Portable ZIP: <a href="@{link.release.prefix}-portable.zip">@{release}-portable.zip</a></li>
 						<li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}.pkg</a></li>
 						<li>macOS app bundle: <a href="@{link.release.prefix}.app.tar.xz">@{release}.app.tar.xz</a></li>
@@ -205,6 +205,7 @@
 						<li>QNAP NAS package is available <a href="linux/qnap.html">via App Center</a></li>
 						<li>Arch Linux package is available <a href="linux/aur.html">via AUR</a></li>
 						<li>Docker images are available <a href="linux/docker.html">on Docker Hub</a></li>
+						<li>All versions are available on our <a href="https://get.filebot.net/filebot/">Release Index</a></li>
 					</ul>
 				</div>
 
