+ Add {history} binding to access the original historic path of {f} (e.g. useful for -exec post-processing calls)

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -543,6 +543,12 @@
 							<td>String</td>
 						</tr>
 						<tr>
+							<td>history</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p2459">original path</a></td>
+							<td>&lt;file path&gt;</td>
+							<td>File</td>
+						</tr>
+						<tr>
 							<td>info</td>
 							<td>extended metadata</td>
 							<td>&lt;all properties&gt;</td>
