--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -224,9 +224,8 @@
 					</a>
 
 					<ul class="list">
-						<li class="note">A valid license is required to unlock FileBot.</li>
-						<li class="note">A single license is valid on all platforms and can be used on multiple machines.</li>
 						<li class="note">You may download and evaluate FileBot before purchasing a license.</li>
+						<li class="note">A single per-user license is valid on all platforms and can be used on multiple machines.</li>
 						<li class="note"><a href="https://get.filebot.net/windows/" target="windows_store">Microsoft Store</a> and <a href="https://get.filebot.net/mac/" target="itunes_store">Mac App Store</a> purchases neither include nor require a <a href="https://www.filebot.net/forums/viewtopic.php?t=6265" target="forum">universal license</a>.</li>
 					</ul>
 				</div>
