--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -30,7 +30,8 @@
 					<img class="icon" src="images/microsoft.logo.svg" alt="download" width="42" height="42" />
 					<h2>FileBot for Windows</h2>
 					<ul class="list">
-						<li>Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a> or <a href="@{link.release.prefix}_x86.msi">@{release}_x86.msi</a></li>
+						<li>64-bit Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
+						<li>32-bit Windows Installer: <a href="@{link.release.prefix}_x86.msi">@{release}_x86.msi</a></li>
 						<li>Windows Portable ZIP: <a href="@{link.release.prefix}-portable.zip">@{release}-portable.zip</a></li>
 						<li>Windows package is available <a href="windows/chocolatey.html">via Chocolatey</a></li>
 					</ul>
@@ -62,8 +63,8 @@
 					<img class="icon" src="images/package.png" alt="download" width="48" height="48" />
 					<h2>FileBot for all POSIX platforms</h2>
 					<ul class="list">
-						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_universal-jdk8.rpm">@{release}_universal-jdk8.rpm</a> <small class="comment">(requires OpenJDK 8)</small></li>
 						<li>POSIX portable tarball: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">for Linux, BSD and Solaris</small> <small class="comment">(requires OpenJDK 8)</small></li>
+						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_universal-jdk8.rpm">@{release}_universal-jdk8.rpm</a> <small class="comment">(requires OpenJDK 8)</small></li>
 						<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and YUM</a></li>
 						<li>Arch Linux package is available <a href="linux/aur.html">via AUR</a></li>
 						<li>Docker images are available <a href="linux/docker.html">on Docker Hub</a></li>
