Added {cy} collection years binding and {movie.collection} extension method

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -363,6 +363,12 @@
 							<td>Integer</td>
 						</tr>
 						<tr>
+							<td>cy</td>
+							<td>movie collection years</td>
+							<td>[1977, 2019]</td>
+							<td>Integer*</td>
+						</tr>
+						<tr>
 							<td>genre</td>
 							<td>primary genre</td>
 							<td>Science Fiction</td>
