Add {bitrate} docs

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -483,6 +483,12 @@
 							<td>String</td>
 						</tr>
 						<tr>
+							<td>bitrate</td>
+							<td>bitrate in bit/s</td>
+							<td>128000</td>
+							<td>Integer</td>
+						</tr>
+						<tr>
 							<td>kbps</td>
 							<td>bitrate in kbit/s</td>
 							<td>320 kbps</td>
