* Added `-no-history` CLI option

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -283,6 +283,11 @@
 							<td></td>
 						</tr>
 						<tr>
+							<td>-no-history</td>
+							<td>disable history</td>
+							<td></td>
+						</tr>
+						<tr>
 							<td>-version</td>
 							<td>print version</td>
 							<td></td>
