--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -187,7 +187,8 @@
 						<li class="macosx">Available on the <a href="https://get.filebot.net/mac/2" target="itunes_store">Mac App Store</a></li>
 						<li class="macappstore note"><span>The <a href="https://get.filebot.net/mac/2" target="itunes_store">Mac App Store</a> version does not support <a href="forums/viewtopic.php?t=5983">certain features</a>.</span></li>
 						-->
-						<li>Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
+						<li>64-bit Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
+						<li>32-bit Windows Installer: <a href="@{link.release.prefix}_x86.msi">@{release}_x86.msi</a></li>
 						<li>Windows Portable ZIP: <a href="@{link.release.prefix}-portable.zip">@{release}-portable.zip</a></li>
 						<li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}.pkg</a></li>
 						<li>macOS app bundle: <a href="@{link.release.prefix}.app.tar.xz">@{release}.app.tar.xz</a></li>
